tests/neg-custom-args/fatal-warnings/i16649-refutable.scala
import quoted.*

def foo(using Quotes)(x: Expr[Int]) =
  val '{ ($y: Int) + ($z: Int) } = x // error
